--- a/supabase/supabase/migrations/render.yaml
+++ b/supabase/supabase/migrations/render.yaml
@@ -8,7 +8,7 @@ services:
     startCommand: npm start
     envVars:
       - key: NODE_VERSION
-        value: 18.17.0
+        value: "18.17.0"
       - key: VITE_SUPABASE_URL
         sync: false
       - key: VITE_SUPABASE_ANON_KEY
